# warren-ai

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TASKS.md  pyproject.toml
tests/: __init__.py  test_data_quality.py  test_devils_advocate.py  test_valuation.py
warren_core/: __init__.py  orchestrator.py
warren_core/agents/: __init__.py  data_quality.py  devils_advocate.py  memo_audit.py  portfolio.py  valuation.py
warren_core/configs/: thresholds.yml  veto_rules.yml
